# test-llgl

./: .gitignore  CMakeLists.txt  README_IMGUI_DIRECT.md  Readme.md  test.patch
.github/workflows/: linux.yml  mac.yml  windows.yml
cmake/: git-patch.cmake  llgl.patch  mac.cmake  spirv-fix.patch
docs/: imgui_llgl_direct.md
libs/shader_translate/: CMakeLists.txt
libs/shader_translate/include/shader_translate/: shader_translate.h
libs/shader_translate/src/: shader_translate.cpp
libs/shader_translate/tools/: shader_translate_cli.cpp
scripts/: generate_imgui_shaders_header.sh
shader/: model.frag  model.vert  model_notex.frag  model_notex.vert  test.frag  test.vert  test_texture.frag  test_texture.vert
src/: camera.cpp  camera.h  imgui_impl_llgl.cpp  imgui_impl_llgl.h  imgui_llgl.cpp  imgui_llgl.h  imgui_llgl_direct.cpp  imgui_llgl_direct.h  imgui_metal_llgl.mm  imgui_shaders.h  main.cpp  main_direct_example.cpp  main_simple.cpp  math_types.h  model_loader.cpp  model_loader.h  primitives.cpp  primitives.h  sdl_llgl.cpp  sdl_llgl.h  shader_translation.cpp  shader_translation.h
